--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@
     --body-bg-color: #FAF7FD;
     --surface-color: rgba(255,200, 221, 0.5);
     --br-url: url(./assets/bg-mobile.jpg);
+    --switch-bg-url: url(./assets/bg-mobile.jpg);
   }
 
   body {
-    background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+    background: var(--br-url) no-repeat top center/cover;
   }
   
   body * {
@@ -96,7 +97,21 @@
     transition: backgroung 0.2s;
     border-radius: 50%;
   }
+
+  #social-links img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+  
+    transition: backgroung 0.2s;
+    border-radius: 50%;
+  }
   
   #social-links a:hover {
+    background: var(--surface-color);
+  }
+
+  #social-links img:hover {
     background: var(--surface-color);
   }
