--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
   
     padding: 16px 24px;
   
-    background: #fefae0;
+    background: var(--body-bg-color);
     border: 1px solid var(--text-color);
     border-radius: 8px;
   
